- applying code to platform specific code or components

--- a/apps/web-tasks/src/app/features/home/components/home.component.html
+++ b/apps/web-tasks/src/app/features/home/components/home.component.html
@@ -1,5 +1,5 @@
 <div class="p-x-20">
-  <nuvious-header title="web-tasks"></nuvious-header>
+  <nuvious-header [title]="'TASKS - WEB'"></nuvious-header>
 
   <h2>Nx</h2>
 
