--- a/apps/nativescript-tasks/src/features/home/components/home.component.html
+++ b/apps/nativescript-tasks/src/features/home/components/home.component.html
@@ -1,7 +1,10 @@
-<StackLayout class="p-20">
-  <Label
-    automationText="helloLabel"
-    [text]="'hello' | translate"
-    class="h1 p-10 text-center"
-  ></Label>
-</StackLayout>
+<GridLayout>
+  <nuvious-header [title]="'TASKS - MOBILE'"></nuvious-header>
+  <StackLayout class="p-20">
+    <Label
+      automationText="helloLabel"
+      [text]="'hello' | translate"
+      class="h1 p-10 text-center"
+    ></Label>
+  </StackLayout>
+</GridLayout>
