- applying third party library to platform agnostic code or components

--- a/libs/xplat/nativescript/features/src/lib/ui/components/header/header.component.html
+++ b/libs/xplat/nativescript/features/src/lib/ui/components/header/header.component.html
@@ -6,4 +6,7 @@
   >
     <Button [text]="rightButton" class="action-item"></Button>
   </ActionItem>
+  <ActionItem>
+    <Label [text]="myDate"></Label>
+  </ActionItem>
 </ActionBar>
