--- a/libs/xplat/web/features/src/lib/ui/components/header/header.component.html
+++ b/libs/xplat/web/features/src/lib/ui/components/header/header.component.html
@@ -1,6 +1,7 @@
 <div style="text-align: center">
 <!--  <h2>&#45;&#45; An app built with Nx and xplat &#45;&#45;</h2>-->
   <h1> {{ title }} </h1>
+  <h2>{{ myDate }}</h2>
   <img width="100" src="assets/nx-logo.png" />
   <span style="position: relative; top: -28px; margin: 10px">+</span>
   <img width="120" src="assets/xplat.png" />
