- applying shared service in both web and nativescript

--- a/apps/nativescript-tasks/src/features/home/components/home.component.html
+++ b/apps/nativescript-tasks/src/features/home/components/home.component.html
@@ -6,5 +6,6 @@
       [text]="'hello' | translate"
       class="h1 p-10 text-center"
     ></Label>
+    <nuvious-tasklist></nuvious-tasklist>
   </StackLayout>
 </GridLayout>
