--- a/apps/web-tasks/src/app/features/home/components/home.component.html
+++ b/apps/web-tasks/src/app/features/home/components/home.component.html
@@ -1,6 +1,8 @@
 <div class="p-x-20">
   <nuvious-header [title]="'TASKS - WEB'"></nuvious-header>
 
+  <nuvious-tasklist></nuvious-tasklist>
+
   <h2>Nx</h2>
 
   Nx is a smart and extensible build framework to help you architect, test, and
