--- a/libs/xplat/nativescript/features/src/lib/tasklist/components/tasklist/tasklist.component.html
+++ b/libs/xplat/nativescript/features/src/lib/tasklist/components/tasklist/tasklist.component.html
@@ -1,3 +1,3 @@
 <StackLayout class="p-20">
-  <Label text="Tasklist" class="text-center"></Label>
+  <Label class="text-center" *ngFor="let task of tasks" [text]="task.title"></Label>
 </StackLayout>
