--- a/libs/xplat/web/features/src/lib/tasklist/components/tasklist/tasklist.component.html
+++ b/libs/xplat/web/features/src/lib/tasklist/components/tasklist/tasklist.component.html
@@ -1,1 +1,9 @@
-<div>Tasklist</div>
+<div>
+  <ul>
+    <li *ngFor="let task of tasks">
+    <span>
+      {{ task.title }}
+    </span>
+    </li>
+  </ul>
+</div>
