- added nativescript task environment setup for dev

--- a/apps/nativescript-tasks/src/features/home/components/home.component.html
+++ b/apps/nativescript-tasks/src/features/home/components/home.component.html
@@ -7,5 +7,15 @@
       class="h1 p-10 text-center"
     ></Label>
     <nuvious-tasklist></nuvious-tasklist>
+    <Label [text]="'Environment Info'"></Label>
+    <FlexboxLayout>
+    <Label [text]="'Production: '"></Label>
+    <Label [text]="env.production"></Label>
+    </FlexboxLayout>
+
+    <FlexboxLayout>
+      <Label [text]="'Environment Name: '"></Label>
+      <Label [text]="env.environmentName"></Label>
+    </FlexboxLayout>
   </StackLayout>
 </GridLayout>
